# business-analyst-ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
scripts/: run.sh
src/: __init__.py
src/agents/: document_writer.py  domain_agent.py  orchestrator.py  planning_agent.py  stakeholder_agent.py  validation_agent.py
src/api/: main.py  routes.py
src/core/: config.py  llm_client.py
src/services/: google_docs.py  neo4j_client.py  pinecone_client.py
src/utils/: logging.py
tests/: test_orchestrator.py
